# mcp-audacity

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  audacity_mcp_server.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
audacity_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: run.sh  setup.sh  smoke_test.py  smoke_test.sh
